--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,11 @@ body{
   /* font-weight: 200; */
 }
 
+.hero-bg{
+  background-image: url('/hero-bg.jpeg');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+
+}
