--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,5 +14,12 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
+}
 
+.menu-drawer-bg{
+  background-image: url('/side-drawer-bg.jpg');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
